@@ -8,8 +8,16 @@ RUN java -Djarmode=tools -jar application.jar extract --destination extracted
 FROM eclipse-temurin:25-jdk-alpine AS trainer
 WORKDIR /at-work
 COPY --from=builder /builder/extracted/ ./
-ENV JAVA_OPTS="-XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+UseStringDeduplication -XX:MaxDirectMemorySize=64m"
-RUN java $JAVA_OPTS -XX:AOTCacheOutput=app.aot \
+ENV JAVA_OPTS="-Xmx384m -Xms384m \
+               -XX:+UseG1GC \
+               -XX:MaxGCPauseMillis=50 \
+               -XX:+UseCompressedOops \
+               -XX:+UseCompressedClassPointers \
+               -XX:-UseCompactObjectHeaders \
+               -XX:MaxDirectMemorySize=64m \
+               -XX:+UseStringDeduplication"
+RUN java $JAVA_OPTS -XX:+AOTClassLinking \
+    -XX:AOTCacheOutput=app.aot \
     -Dspring.context.exit=onRefresh \
     -Dspring.profiles.active=prod \
     -jar application.jar || echo "AOT Training finished with exit code $?"
@@ -19,8 +27,14 @@ FROM eclipse-temurin:25-jdk-alpine
 WORKDIR /application
 COPY --from=trainer /at-work/ ./
 
-ENV JAVA_OPTS="-XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:+UseStringDeduplication -XX:MaxDirectMemorySize=64m"
-ENTRYPOINT exec java $JAVA_OPTS \
+ENV JAVA_OPTS="-XX:+UseG1GC \
+               -XX:MaxGCPauseMillis=50 \
+               -XX:+UseCompressedOops \
+               -XX:+UseCompressedClassPointers \
+               -XX:-UseCompactObjectHeaders \
+               -XX:MaxDirectMemorySize=64m \
+               -XX:+UseStringDeduplication"
+ENTRYPOINT exec java $JAVA_OPTS -XX:+AOTClassLinking \
     -XX:AOTCache=app.aot \
     -Xlog:aot \
     -Djava.security.egd=file:/dev/./urandom \
